--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap');
 
 body {
-    background: #8C52FF;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: #86a6db;
+    font-family: 'segoe UI', Tahoma, Geneva, verdana, sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -15,27 +16,29 @@ body {
     padding: 20px;
     border-radius: 15px;
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur (10px);
+    border: 10px solid rgba(255, 255, 255, 0.1);
     text-align: center;
 }
 
-h2, label, p {
+h2,
+label,
+p {
     color: #fff;
     margin: 8px 0;
 }
 
 input {
     width: calc(100% - 16px);
-    padding: 8px;
+    padding: 5px;
     box-sizing: border-box;
     border-radius: 10px;
-    border: 1px solid white;
+    border: 10px solid white;
     margin-top: 20px;
 }
 
 button {
-    background: #debff4;
+    background: #8aa5d4;
     color: white;
     padding: 10px;
     border: none;
@@ -47,12 +50,12 @@ button {
 }
 
 button:hover {
-    background: #8b48d7;
+    background: #3d6099;
 }
 
 #temp-div p {
     font-size: 60px;
-    margin-top: -30px;
+    margin: -30px;
 }
 
 #weather-info {
@@ -62,7 +65,7 @@ button:hover {
 #weather-icon {
     width: 200px;
     height: 200px;
-    margin: 0 auto 10px; 
+    margin: 0 auto 10px;
     margin-bottom: 0;
     display: none;
 }
@@ -72,7 +75,7 @@ button:hover {
     overflow-x: auto;
     white-space: nowrap;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .hourly-item {
@@ -95,4 +98,3 @@ button:hover {
     color: #fff;
     margin-top: 10px;
 }
-
